Add votes against funding Planned Parenthood

--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -125,15 +125,26 @@
                     <td><img src="/images/icons/x.svg" alt="no"><sup>1, 2, 3, 4</sup></td>
                 </tr>
                 <tr>
+                    <th scope="row">Women's Health</th>
+                    <td>
+                        <a href="/issues/women">
+                            <img src="/images/icons/check.svg" alt="yes">
+                        </a>
+                    </td>
+                    <td><img src="/images/icons/check.svg" alt="yes"></td>
+                    <td><img src="/images/icons/x.svg" alt="no"><sup>5</sup></td>
+                    <td><img src="/images/icons/x.svg" alt="no"><sup>5</sup></td>
+                </tr>
+                <tr>
                     <th scope="row">LGBTQ Rights</th>
                     <td>
                         <a href="/issues/lgbt">
                             <img src="/images/icons/check.svg" alt="yes">
                         </a>
                     </td>
-                    <td><img src="/images/icons/x.svg" alt="no"><sup>5, 6</sup></td>
-                    <td><img src="/images/icons/x.svg" alt="no"><sup>5, 7</sup></td>
-                    <td><img src="/images/icons/x.svg" alt="no"><sup>5, 6</sup></td>
+                    <td><img src="/images/icons/x.svg" alt="no"><sup>6, 7</sup></td>
+                    <td><img src="/images/icons/x.svg" alt="no"><sup>6, 8</sup></td>
+                    <td><img src="/images/icons/x.svg" alt="no"><sup>6, 7</sup></td>
                 </tr>
                 <tr>
                     <th scope="row">Criminal Justice Reform</th>
@@ -142,9 +153,9 @@
                             <img src="/images/icons/check.svg" alt="yes">
                         </a>
                     </td>
-                    <td><img src="/images/icons/x.svg" alt="no"><sup>10</sup></td>
-                    <td><img src="/images/icons/x.svg" alt="no"><sup>8, 9, 10, 11</sup></td>
-                    <td><img src="/images/icons/x.svg" alt="no"><sup>8, 9, 10, 11</sup></td>
+                    <td><img src="/images/icons/x.svg" alt="no"><sup>11</sup></td>
+                    <td><img src="/images/icons/x.svg" alt="no"><sup>9, 10, 11, 12</sup></td>
+                    <td><img src="/images/icons/x.svg" alt="no"><sup>9, 10, 11, 12</sup></td>
                 </tr>
                 <tr>
                     <th scope="row">$15 Minimum Wage</th>
@@ -153,7 +164,7 @@
                             <img src="/images/icons/check.svg" alt="yes">
                         </a>
                     </td>
-                    <td><img src="/images/icons/x.svg" alt="no"><sup>12</sup></td>
+                    <td><img src="/images/icons/x.svg" alt="no"><sup>13</sup></td>
                     <td><img src="/images/icons/unknown.svg" alt="unknown"></td>
                     <td><img src="/images/icons/unknown.svg" alt="unknown"></td>
                 </tr>
@@ -164,7 +175,7 @@
                             <img src="/images/icons/check.svg" alt="yes">
                         </a>
                     </td>
-                    <td><img src="/images/icons/unknown.svg" alt="unknown"><sup>13, 14</sup></td>
+                    <td><img src="/images/icons/unknown.svg" alt="unknown"><sup>14, 15</sup></td>
                     <td><img src="/images/icons/check.svg" alt="yes"></td>
                     <td><img src="/images/icons/check.svg" alt="yes"></td>
                 </tr>
@@ -175,9 +186,9 @@
                             <img src="/images/icons/check.svg" alt="yes">
                         </a>
                     </td>
-                    <td><img src="/images/icons/x.svg" alt="no"><sup>15</sup></td>
+                    <td><img src="/images/icons/x.svg" alt="no"><sup>16</sup></td>
                     <td><img src="/images/icons/check.svg" alt="yes"></td>
-                    <td><img src="/images/icons/x.svg" alt="no"><sup>15, 16</sup></td>
+                    <td><img src="/images/icons/x.svg" alt="no"><sup>16, 17</sup></td>
                 </tr>
                 <tr>
                     <th scope="row">Pro-Immigrant</th>
@@ -185,8 +196,8 @@
                         <img src="/images/icons/check.svg" alt="yes">
                     </td>
                     <td><img src="/images/icons/check.svg" alt="yes"></td>
-                    <td><img src="/images/icons/x.svg" alt="no"><sup>17</sup></td>
-                    <td><img src="/images/icons/x.svg" alt="no"><sup>17</sup></td>
+                    <td><img src="/images/icons/x.svg" alt="no"><sup>18</sup></td>
+                    <td><img src="/images/icons/x.svg" alt="no"><sup>18</sup></td>
                 </tr>
                 <tr>
                     <th scope="row">Veteran</th>
@@ -222,6 +233,11 @@
             <li>
                 <a href="//openstates.org/md/bills/2017/HB1167/">Co-sponsored</a> anti-abortion bill
                 (<a href="http://mgaleg.maryland.gov/2017RS/bills/hb/hb1167f.pdf">HB1167 - 2017</a>).
+            </li>
+            <li>
+                <a href="//openstates.org/md/votes/MDV00024064/">Voted against</a> funding
+                Planned Parenthood
+                (<a href="http://mgaleg.maryland.gov/2017RS/bills/hb/hb1083t.pdf">HB1083 — 2017</a>).
             </li>
             <li>
                 Voted against Pro-LGBTQ legislation
