--- a/src/app/pages/news/news.html
+++ b/src/app/pages/news/news.html
@@ -28,9 +28,8 @@
                 As a state, we also took important steps to resist some of the worst
                 impulses of the Trump administration, such as empowering the Attorney
                 General to sue the federal government. Funding for Planned Parenthood
-                is now also guaranteed — no thanks to any of our District 32 delegates
-                though, who all voted for Floor Amendment 943425/1, which would have
-                stripped the funding guarantee from the FY2018 Budget Bill (HB150).
+                is now also guaranteed — no thanks to Delegates Chang and Sophocleus
+                though, who both voted against HB1083.
             </p>
 
             <p>
