Upgrade Beidle on Criminal Justice Reform
More accurately reflect Delegate Beidle's voting
record on criminal justice reform as somewhat mixed.

--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -153,7 +153,7 @@
                             <img src="/images/icons/check.svg" alt="yes">
                         </a>
                     </td>
-                    <td><img src="/images/icons/x.svg" alt="no"><sup>11</sup></td>
+                    <td><img src="/images/icons/unknown.svg" alt="questionable"><sup>11</sup></td>
                     <td><img src="/images/icons/x.svg" alt="no"><sup>9, 10, 11, 12</sup></td>
                     <td><img src="/images/icons/x.svg" alt="no"><sup>9, 10, 11, 12</sup></td>
                 </tr>
@@ -175,7 +175,7 @@
                             <img src="/images/icons/check.svg" alt="yes">
                         </a>
                     </td>
-                    <td><img src="/images/icons/unknown.svg" alt="unknown"><sup>14, 15</sup></td>
+                    <td><img src="/images/icons/unknown.svg" alt="questionable"><sup>14, 15</sup></td>
                     <td><img src="/images/icons/check.svg" alt="yes"></td>
                     <td><img src="/images/icons/check.svg" alt="yes"></td>
                 </tr>
