Update bail and UCPJ copy on Justice issue

--- a/src/app/pages/issues/justice/justice.html
+++ b/src/app/pages/issues/justice/justice.html
@@ -23,8 +23,6 @@
             incarcerated than a white person.
         </p>
 
-        <img src="/images/issues/justice/incarceration-rates.jpg" alt="Incarceration rates by race in Maryland">
-
         <p>
             Communities that experience disproportionate incarceration rates
             <a href="http://www.pewtrusts.org/~/media/legacy/uploadedfiles/pcs_assets/2010/collateralcosts1pdf.pdf">suffer profound intergenerational consequences.
@@ -73,19 +71,50 @@
         <h3>Bail</h3>
 
         <p>
-            Bail plays a large but not well known role in mass incarceration in Maryland.
+            $256 million. That's the amount of money that has been extracted from Maryland
+            communities over a 5 year period in the form of non-refundable corporate bail bond premiums.
+            Over that same time period, $181 million was paid by defendants who were black,
+            while defendants of all other races combined paid $75 million.
+        </p>
+
+        <img src="/images/issues/justice/bail.png" alt="70% of all corporate bail bond premiums are paid by people of color">
+
+        <p>
+            Our cash bail system has resulted in a huge transfer of wealth from communities
+            of color in Maryland to the billion-dollar bail bond industry.
         </p>
 
         <p>
-            Pretrial detainees make up roughly 20% of our prison population, and, as
-            <a href="http://thedailyrecord.com/2016/11/17/bail-reform-symposium/">explained</a>
-            by Maryland Public Defender Paul B. DeWolfe, \"In practice, amounts of [bail] money
-            are (selected) randomly.\"
+            Additionally, over the same time period, 46,597 defendants were detained
+            for more than 5 days for a failure to pay bail. For at least 17,434 of those defendants,
+            their bail was set at less than $5,000.
         </p>
 
         <p>
-            Maryland judicial officers should be required to <a href="http://www.baltimoresun.com/news/opinion/oped/bs-ed-bail-rules-20161116-story.html">set bail prices at levels
-            that defendants can reasonably afford</a>.
+            Defendants who lack the funds to put up bail are faced with two options:
+            remain in jail, unable to continue working or caring for their families, or pay the
+            premiums demanded by the bail bond industry — 10% or more of their bail. If you must put
+            up a $10,000 secured bond for bail, you will pay $1,000 or more — money that you will not
+            get back, even if you are found to be completely innocent.
+        </p>
+
+        <p>
+            Study after study has found that the key factor in determining if an individual is
+            incarcerated while awaiting trial is not the risk they pose to society, nor is it
+            the risk of them failing to appear in court. The number one factor is simply whether
+            they have enough money to pay bail. Not only does bail not have an impact on whether
+            or not a defendant returns to court, but it actually has been found to be the cause of
+            new crime and is used to coerce convictions.
+        </p>
+
+        <p>
+            The US Department of Justice and the American Bar Association have called pretrial
+            detention systems that jail people simply because they are poor both irrational and
+            unconstitutional.
+        </p>
+
+        <p>
+            It's time to end permanently end the use of secured cash bail bonds in our justice system.
         </p>
 
         <h3>Public Defenders</h3>
@@ -109,46 +138,25 @@
 
         <h2>Law Enforcement Reform</h2>
 
-        <h3>Policing By Consent</h3>
+        <h3>Uniform Code of Police Justice</h3>
 
         <p>
-            American police forces have slowly moved away from the original <a href="https://en.wikipedia.org/wiki/Peelian_principles">Peelian Principles</a> upon which they originally based their practices.
-            These Principles are largely uncontroversial among the public at large:
-
-            <ul>
-                <li>
-                    To recognize always that the power of the police to fulfill their functions and duties is dependent on public approval of their existence, actions and behavior, and on their ability to secure and maintain public respect.
-                </li>
-                <li>
-                    To recognize always that to secure and maintain the respect and approval of the public means also the securing of the willing co-operation of the public in the task of securing observance of laws.
-                </li>
-                <li>
-                    To recognize always that the extent to which the co-operation of the public can be secured diminishes proportionately the necessity of the use of physical force and compulsion for achieving police objectives.
-                </li>
-                <li>
-                    To seek and preserve public favor, not by pandering to public opinion, but by constantly demonstrating absolutely impartial service to law, in complete independence of policy, and without regard to the justice or injustice of the substance of individual laws, by ready offering of individual service and friendship to all members of the public without regard to their wealth or social standing, by ready exercise of courtesy and friendly good humor, and by ready offering of individual sacrifice in protecting and preserving life.
-                </li>
-                <li>
-                    To use physical force only when the exercise of persuasion, advice and warning is found to be insufficient to obtain public co-operation to an extent necessary to secure observance of law or to restore order, and to use only the minimum degree of physical force which is necessary on any particular occasion for achieving a police objective.
-                </li>
-                <li>
-                    To maintain at all times a relationship with the public that gives reality to the historic tradition that the police are the public and that the public are the police, the police being only members of the public who are paid to give full-time attention to duties which are incumbent on every citizen in the interests of community welfare and existence.
-                </li>
-                <li>
-                    To recognize always that the test of police efficiency is the absence of crime and disorder, and not the visible evidence of police action in dealing with them.
-                </li>
-            </ul>
+            With great power comes great responsibility. And the people we entrust with that
+            power must be held to a higher standard than their fellow citizens.
         </p>
 
         <p>
-            The militarization of our police forces and the seemingly daily stream of videos
-            showing excessive use of force by police are evidence that we have forgotten
-            the above principles and ignored the consequences.
+            In the military, our soldiers are subject to the Uniform Code of Military Justice
+            (UCMJ). While we honor their service, we recognize that there is a need for special
+            obligations commensurate with the significant duties and responsibilities entrusted
+            to our armed forces.
         </p>
 
         <p>
-            We must work to demilitarize our police forces, increase training for police to
-            emphasize deescalation, and create a force that internalizes the above principles.
+            Our law enforcement officers, like our military, have a special role to play and are
+            similarly entrusted with great powers — including the use of deadly force. We need
+            a counterpart to the UCMJ — a Uniform Code of Police Justice — to similarly hold
+            those we entrust to defend our communities to a higher standard.
         </p>
 
         <a href="/issues" class="back-to-issues">See other issues</a>
