Advocate for single-payer health care

--- a/src/app/pages/issues/healthcare/healthcare.html
+++ b/src/app/pages/issues/healthcare/healthcare.html
@@ -1,7 +1,7 @@
 <template args="model">
     <div class="banner curved-bottom"></div>
     <article>
-        <h1>Universal Health Insurance</h1>
+        <h1>Universal Health Care</h1>
 
         <blockquote class="issue">
             America's health care system is neither healthy, caring, nor a system.<br>
@@ -9,40 +9,36 @@
         </blockquote>
 
         <p>
-            Medical bills are the leading cause of bankruptcy in the United
-            States, outnumbering <em>all other causes combined</em>. More than
-            25% of all adults have said that <a href="http://www.npr.org/sections/health-shots/2016/03/08/468892489/medical-bills-still-take-a-big-toll-even-with-insurance">health care costs have caused a
-            serious financial problem</a>. Additionally, 240,000 Marylanders still lack
-            any type of health insurance.
+            Health care is not a luxury, it is a basic human right.
         </p>
 
         <p>
-            Universal Health<em>care</em> would be the ideal solution to health care;
-            however, as Colorado's <a href="http://www.coloradoindependent.com/162305/coloradocare-amendment-69">brief flirtation</a> with ColoradoCare showed, implementing universal healthcare
-            at the state level comes with additional complications that can only
-            be avoided by implementing it at a national level.
+            Under a single-payer health care plan, every Maryland resident would
+            be entitled to decent health care without the need to pay premiums,
+            deductibles, or copays.
         </p>
 
         <p>
-            Universal Health <em>Insurance</em>, on the other hand, is a much more
-            manageable step that would be relatively inexpensive to implement,
-            but would help to reduce the number of bankruptcies due to medical bills —
-            and make Maryland the first state to provide 100% of residents at least
-            some level of health care coverage.
+            Such a plan would provide more equitable access to health care for
+            families and businesses while at the same time helping to <a href="http://www.pnhp.org/facts/singlepayer_myths_singlepayer_facts.php">save billions
+            of dollars</a> due to the administrative waste in our current system.
         </p>
 
         <p>
-            By providing all Marylander's with Catastrophic Health Insurance, we can
-            provide full coverage for anyone whose health care costs exceed a percentage
-            of their incomes.
+            This isn't theoretical either — we already know single-payer works.
+            The United States is the only major country that fails to provide
+            or guarantee a right to health care. And yet the United States also
+            manages to spend far more on health care than other developed nations.
         </p>
 
+        <img src="/images/issues/healthcare/oecd-per-capita.jpg" alt="The United States spends nearly 250% more on health care than the average OECD country">
+
         <p>
-            Employer-provided insurance, Medicaid, Medicare, and plans
-            bought through the Maryland Health Connection would continue to be the norm
-            for everyday medical expenditures, but unexpected and unpredictable
-            health care costs would no longer leave families with impossible-to-pay
-            medical bills.
+            While the Trump administration and Congressional Republicans continue
+            to attack our health care system in order to provide massive tax
+            cuts to the rich, Maryland can go in a different direction and join
+            the rest of the developed world in recognizing health care as a basic
+            human right.
         </p>
 
         <a href="/issues" class="back-to-issues">See other issues</a>
