Add Run for Something endorsement news

--- a/src/app/pages/news/news.html
+++ b/src/app/pages/news/news.html
@@ -3,6 +3,50 @@
     <article>
         <h1>News</h1>
 
+        <article class="press-release">
+            <h2>Run for Something Endorses Derek Kent</h2>
+            <time datetime="2016-11-17">Aug. 11, 2017</time>
+
+            <p>
+                <span class="location"><span class="city">Hanover</span>, Md.</span> –
+                Run for Something, the group formed in the wake of the 2016 election
+                to recruit progressive Millennials to run for local offices, announced
+                its endorsement for Derek Kent and 64 other candidates from 18 states
+                today.
+            </p>
+
+            <p>
+                Derek is running to represent District 32 in Maryland's House of Delegates.
+            </p>
+
+            <p>
+                “Our goal is to get people to run good campaigns all across the country,
+                so we’re looking for people who have an idea how to get from A to Z,”
+                said Amanda Litman, Run for Something's co-founder and veteran of
+                election campaigns for Barack Obama, Charlie Crist, and Hillary Clinton.
+            </p>
+
+            <p>
+                Run for Something was founded by Litman and Ross Morales Rocketto, but
+                was quickly joined by other experienced political operatives, including
+                Cristobal Alex, President of the Latino Victory Fund; Sabrina Hersi
+                Issa, CEO of Be Bold Media; Aneesa McMillan, Deputy Communications
+                Director for Keith Ellison for DNC Chair; and Charles Olivier, CFO of
+                the Democratic National Committee.
+            </p>
+
+            <p>
+                “No single individual makes a movement, but every movement is made of
+                countless individuals standing together to make a difference,” said
+                Derek. “Right now, we are in the midst of a political movement in this
+                country to reaffirm the basic human rights of all members of our society,
+                and to make our political system responsive to the citizenry it represents.
+                The work that Run for Something does to support progressive young voices is
+                critical to ensuring the success and longevity of this movement, and I am
+                proud to have their support and to stand with them in this moment.”
+            </p>
+        </article>
+
         <article class="newsletter">
             <h2>2017 General Assembly Session Review</h2>
             <time datetime="2017-04-12">April 12, 2017</time>
