Change donation links to /donate

--- a/src/app/components/shell/header/header.html
+++ b/src/app/components/shell/header/header.html
@@ -27,7 +27,7 @@
                 </li>
             </if>
             <li class="nav-item">
-                <a href="https://secure.actblue.com/contribute/page/derekkent?refcode=homepage&amount=27" class="btn btn-red" data-local="true">Contribute</a>
+                <a href="/donate" class="btn btn-red">Contribute</a>
             </li>
         </ul>
     </nav>
