--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -301,7 +301,7 @@
             </p>
             <p>
                 <strong>So remember to <a href="/join">join us</a>,
-                <a href="https://secure.actblue.com/contribute/page/derekkent?refcode=homepage&amount=27" data-local="true">contribute</a> if you can, and most importantly, <a href="http://www.elections.state.md.us/voting/where.html">go vote</a> in the Democratic primaries on June 26th, 2018.</strong>
+                <a href="/donate">contribute</a> if you can, and most importantly, <a href="http://www.elections.state.md.us/voting/where.html">go vote</a> in the Democratic primaries on June 26th, 2018.</strong>
             </p>
         </div>
     </article>
