Add link to contact page to footer

--- a/src/app/components/shell/footer/footer.html
+++ b/src/app/components/shell/footer/footer.html
@@ -28,12 +28,15 @@
         Hanover, MD 21076
     </address>
 
-    <div class="social">
+    <div class="connect">
         <a href="https://facebook.com/DerekKentMD" data-local="true">
             <img src="/images/social/facebook.svg" alt="Facebook">
         </a>
         <a href="https://twitter.com/DerekKent" data-local="true">
             <img src="/images/social/twitter.svg" alt="Twitter">
+        </a>
+        <a href="/contact">
+            <img src="/images/icons/e-mail.svg" alt="E-mail">
         </a>
     </div>
 
