--- a/src/app/components/shell/footer/footer.scss
+++ b/src/app/components/shell/footer/footer.scss
@@ -67,7 +67,7 @@
         text-transform: uppercase;
     }
 
-    .social {
+    .connect {
         align-items: center;
         display: flex;
         justify-content: center;
