--- a/src/styles/components/forms.scss
+++ b/src/styles/components/forms.scss
@@ -101,5 +101,10 @@ input {
 }
 
 textarea {
+    border: 0.1rem solid #ccc;
+    border-radius: 0.3rem;
+    font-family: "Byington", Garamond, "EB Garamond", Georgia, serif;
+    font-size: 1.15em;
+    padding: 0.75em 1em;
     width: 100%;
 }
