Use relative link for contact page

--- a/src/app/pages/accessibility/accessibility.html
+++ b/src/app/pages/accessibility/accessibility.html
@@ -48,7 +48,7 @@
         <p>If you enjoyed using the Derek Kent for Maryland District 32 website, or if you had trouble with any part of it, please get in touch. We'd like to hear from you in any of the following ways:</p>
 
         <ul>
-            <li>get in touch at <a href="https://derekkent.com/contact">https://derekkent.com/contact</a></li>
+            <li>get in touch at <a href="/contact">https://derekkent.com/contact</a></li>
             <li>email us at <a href="mailto:info@derekkent.com">info@derekkent.com</a></li>
             <li>call us at <a href="tel:+14438775683">(443) 877-KENT</a></li>
         </ul>
