Sandbox YouTube iframes

--- a/src/app/pages/issues/opengov/opengov.html
+++ b/src/app/pages/issues/opengov/opengov.html
@@ -41,7 +41,7 @@
 
         <div class="youtube-video-wrapper">
             <div class="youtube-video">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/69pPKZeKC8U" frameborder="0" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/69pPKZeKC8U" frameborder="0" allowfullscreen sandbox="allow-scripts allow-popups allow-popups-to-escape-sandbox"></iframe>
             </div>
         </div>
 
