Add message indicating javascript is required

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -185,4 +185,9 @@ img {
         height: auto;
         width: 50vw;
     }
+
+    p {
+        font-size: 1.8rem;
+        margin-top: 5rem;
+    }
 }
