Drop support for IE11

--- a/src/app/components/shell/shell.html
+++ b/src/app/components/shell/shell.html
@@ -1,5 +1,5 @@
 <!-- <div id="banner"></div> -->
-<!-- <div id="header"></div> -->
+<div id="header"></div>
 <div id="main"></div>
 <!-- <div id="endorsements"></div> -->
-<!-- <div id="footer"></div> -->
+<div id="footer"></div>
