--- a/src/app/components/shell/header/header.html
+++ b/src/app/components/shell/header/header.html
@@ -6,7 +6,7 @@
                     <img src="/images/kent.svg" alt="Derek Kent for Maryland District 32" height="40" />
                 </a>
             </li>
-            <!-- <li class="expand-nav">
+            <li class="expand-nav">
                 <button>☰</button>
             </li>
             <if condition="page !== 'petitions'">
@@ -25,7 +25,7 @@
             </if>
             <li class="nav-item">
                 <a href="/donate" class="btn btn-red">Contribute</a>
-            </li> -->
+            </li>
         </ul>
     </nav>
 </template>
