--- a/src/styles/components/issue-blocks.scss
+++ b/src/styles/components/issue-blocks.scss
@@ -21,7 +21,7 @@
     }
 
     > li {
-        flex: 1 1 29%; // Set to 29% instead of 33% for IE11
+        flex: 1 1 33%;
         padding: 1.5rem;
 
         @include tablet {
