Add 2018 MLK Day Statement

--- a/src/app/pages/news/news.html
+++ b/src/app/pages/news/news.html
@@ -3,6 +3,81 @@
     <article>
         <h1>News</h1>
 
+        <article class="newsletter">
+            <h2>On Justice and Equality</h2>
+            <time datetime="2018-01-15">Jan. 15, 2018</time>
+
+            <p>
+                “The ultimate measure of a man is not where he stands in moments of comfort and convenience, but where he stands at times of challenge and controversy.”
+            </p>
+
+            <p>
+                Martin Luther King Jr. spoke those words in the last speech he ever gave. He almost seemed aware that his life would soon end, but he nevertheless felt compelled to continue to speak out for justice and equality.
+            </p>
+
+            <p>
+                Those words assuredly still hold true today as well, and serve as a beacon of veracity and a challenge to every person — man and woman — to come together in solidarity and to resist the voices that would seek to have us judge our neighbors by the color of their skin, rather than the content of their character.
+            </p>
+
+            <p>
+                As we continue to struggle though, we must also recognize that no collection of marches, speeches, or elections will bring us the justice and equality we seek alone, because justice and equality must also mean economic justice and economic equality. Economic power buys political power. And political power buys justice.
+            </p>
+
+            <p>
+                In his final book, Where Do We Go From Here: Chaos or Community?, Martin Luther King Jr. made a powerful case for the need for economic justice:
+            </p>
+
+            <blockquote>
+                <p>
+                    We have come a long way in our understanding of human motivation and of the blind operation of our economic system. Now we realize that dislocations in the market operation of our economy and the prevalence of discrimination thrust people into idleness and bind them in constant or frequent unemployment against their will.
+                </p>
+
+                <p>
+                    […]
+                </p>
+
+                <p>
+                    The problem indicates that our emphasis must be two-fold. We must create full employment or we must create incomes.
+                </p>
+
+                <p>
+                    […]
+                </p>
+
+                <p>
+                    I am now convinced that the simplest approach will prove to be the most effective — the solution to poverty is to abolish it directly by a now widely discussed measure: the guaranteed income.
+                </p>
+            </blockquote>
+
+            <p>
+                The racism today that represses people of color is even more insidious than the overtly racist laws that proceeded. It is a systemic racism that mercilessly represses, while simultaneously allowing people to pretend it doesn’t exist.
+            </p>
+
+            <p>
+                It’s the reason why a young black man or woman born into poverty is likely to remain in poverty their entire life.
+            </p>
+
+            <p>
+                When you are missing weeks of school because the heater broke due to lack of investment in schools in your community, you fall behind. When money is taken out of public schools so that wealthy families can get a discount sending their kids to private schools, you fall behind. And when you as a community fall behind, you are deprived of the political power necessary to deal with those and every interconnected issue, from policing and the legal system to local and state politics, to health care and employment.
+            </p>
+
+            <p>
+                This year is the 50th anniversary of Martin Luther King Jr.’s death, yet we are no closer to implementing the guaranteed income he called for than we were in 1967 when his final book was published.
+            </p>
+
+            <p>
+                It’s time for that to change. We are the wealthiest state in the wealthiest country in the history of the world. Our GDP is nearly 4 times greater than it was 50 years ago. And yet our income gap continues to grow, poverty continues to be used as a tool of repression, and our middle class continues to shrink.
+            </p>
+
+            <p>
+                So I ask you, when you’re out marching today, don’t just march to resist racial injustice or the vile rhetoric emanating from the White House. March to resist the economic injustice that enables and fuels it too.
+            </p>
+
+            <p>
+                And let’s start demanding our elected officials stop patting themselves on the back for the Civil Rights Act of 1964 and start demanding they take bold action today to bring us closer to the dream that Martin Luther King Jr. shared with us over half a century ago.
+            </p>
+        </article>
+
         <article class="press-release">
             <h2>Run for Something Endorses Derek Kent</h2>
             <time datetime="2016-11-17">Aug. 11, 2017</time>
