Update to reflect end of term as board member

--- a/src/app/pages/about/about.html
+++ b/src/app/pages/about/about.html
@@ -23,7 +23,7 @@
         </p>
 
         <p>
-            Derek also sits on the Executive Board for District 32 Democrats.
+            Derek is also a former Executive Board member for District 32 Democrats.
         </p>
 
         <p>
