Add Democracy vouchers solution to Corruption page

--- a/src/app/pages/issues/corruption/corruption.html
+++ b/src/app/pages/issues/corruption/corruption.html
@@ -57,6 +57,22 @@
             bring about the end of big money's corrupting influence at all levels of government.
         </p>
 
+        <h2>Democracy Vouchers</h2>
+
+        <p>
+            Just getting big money out of politics isn't enough — we also have to get small money in.
+        </p>
+
+        <p>
+            A Democracy voucher is a method of funding public elections by providing registered
+            voters vouchers that they can give to a candidate or candidates they want to support.
+        </p>
+
+        <p>
+            Democracy vouchers help give every citizen the power to support candidates and policies
+            they support, regardless of their level of income.
+        </p>
+
         <h2>Fair Elections</h2>
 
         <p>
