Reduce sandbox strictness for YouTube videos
The allowed rules combined effectively make sandboxing useless,
but we have little choice if we want to make YouTube videos work
again.

--- a/src/app/pages/issues/corruption/corruption.html
+++ b/src/app/pages/issues/corruption/corruption.html
@@ -24,9 +24,17 @@
 
         <div class="youtube-video-wrapper">
             <div class="youtube-video">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/5tu32CCA_Ig" frameborder="0" allowfullscreen sandbox="allow-scripts allow-popups allow-popups-to-escape-sandbox"></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/5tu32CCA_Ig" frameborder="0" allowfullscreen sandbox="allow-scripts allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-forms allow-presentation"></iframe>
             </div>
         </div>
+
+        <p>
+            <strong>
+                Our campaign is proud to lead by example and reject all donations and support
+                from for-profit corporations and corporate PACs, lobbyists, lobby firms, and
+                independent-expenditure only committees (aka Super PACs).
+            </strong>
+        </p>
 
         <h2>Get Big Money Out of Politics</h2>
 
