--- a/src/app/pages/issues/energy/energy.html
+++ b/src/app/pages/issues/energy/energy.html
@@ -37,7 +37,7 @@
 
         <div class="youtube-video-wrapper">
             <div class="youtube-video">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/irlus-5T5LI" frameborder="0" allowfullscreen sandbox="allow-scripts allow-popups allow-popups-to-escape-sandbox"></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/irlus-5T5LI" frameborder="0" allowfullscreen sandbox="allow-scripts allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-forms allow-presentation"></iframe>
             </div>
         </div>
 
