--- a/src/app/pages/issues/policy/policy.html
+++ b/src/app/pages/issues/policy/policy.html
@@ -16,7 +16,7 @@
 
         <div class="youtube-video-wrapper">
             <div class="youtube-video">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/MvC6kwU3zgA" frameborder="0" allowfullscreen sandbox="allow-scripts allow-popups allow-popups-to-escape-sandbox"></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/MvC6kwU3zgA" frameborder="0" allowfullscreen sandbox="allow-scripts allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-forms allow-presentation"></iframe>
             </div>
         </div>
 
