--- a/src/app/pages/issues/minimum-wage/minimum-wage.html
+++ b/src/app/pages/issues/minimum-wage/minimum-wage.html
@@ -16,7 +16,7 @@
 
         <div class="youtube-video-wrapper">
             <div class="youtube-video">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/exdR6lhN4bk" frameborder="0" allowfullscreen sandbox="allow-scripts allow-popups allow-popups-to-escape-sandbox"></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/exdR6lhN4bk" frameborder="0" allowfullscreen sandbox="allow-scripts allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-forms allow-presentation"></iframe>
             </div>
         </div>
 
@@ -28,7 +28,7 @@
 
         <div class="youtube-video-wrapper">
             <div class="youtube-video">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/QPKKQnijnsM" frameborder="0" allowfullscreen sandbox="allow-scripts allow-popups allow-popups-to-escape-sandbox"></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/QPKKQnijnsM" frameborder="0" allowfullscreen sandbox="allow-scripts allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-forms allow-presentation"></iframe>
             </div>
         </div>
 
