--- a/src/app/pages/404/404.html
+++ b/src/app/pages/404/404.html
@@ -1,1 +1,7 @@
-<h1>Page Not Found</h1>
+<template args="model">
+    <div class="wrapper">
+        <h1>This content is not available in your country</h1>
+
+        <img src="/images/icons/alert.svg" alt="Alert" width="170" height="170" title="Or any other country">
+    </div>
+</template>
