Add nofollow to endorsement links

--- a/src/app/components/shell/endorsements/endorsements.html
+++ b/src/app/components/shell/endorsements/endorsements.html
@@ -2,7 +2,7 @@
     <h2>Endorsed By</h2>
     <ul>
         <li each="endorsement in endorsements">
-            <a href="{endorsement.link}">
+            <a href="{endorsement.link}" rel="nofollow">
                 <img src="{endorsement.image}" alt="{endorsement.name}">
             </a>
         </li>
