Update clean energy policy with 2030 goals

--- a/src/app/pages/issues/energy/energy.html
+++ b/src/app/pages/issues/energy/energy.html
@@ -55,10 +55,10 @@
         </p>
 
         <p>
-            A commitment to expanding our use of renewable energy to 40% by 2025
-            would not just be good for the environment and our health, but would
-            also create thousands of well-paying jobs right here in Anne Arundel
-            County.
+            A commitment to expanding our use of renewable energy to 50% by 2030
+            and phasing out waste incineration as a qualifying source would not
+            just be good for the environment and our health, but would also
+            create thousands of well-paying jobs right here in Anne Arundel County.
         </p>
 
         <p>
